FIX responsive sections working on smaller sizes remove height attributes on section containers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,16 @@
 html {
     max-width:100%;
     overflow-x: hidden;
+    
 }
 body {
     background-color: #CEF7A0;
+    min-height:100vh;
+    
 }
 .navbar {
     background-color: rgba(31, 39, 27, .9);
-    height:150px;
+    height:100px;
     
 }
 .navbar-brand {
@@ -20,18 +23,24 @@ body {
 }
 
 .container-footer {
-    height:150px;
+    height:100px;
     background-color: rgba(31, 39, 27, .9);
-    margin-top:100%;
+    width:100%;
+    margin:0 auto;
+    padding:0;
+    
 }
 .container-footer .col {
     text-align: center; 
-    font-size:30px;   
+    font-size:30px;
+       
+}
+.container-footer > .row {
+    height:100px;
 }
 
 .main-grid {
     width:100%;
-    height:450px;
     padding-top:5px;
     text-align:center;
 } 
@@ -48,15 +57,13 @@ body {
  }
  .welcome {
      width:100%;
-     height:300px;
      text-align:center;
      font-family:'Roboto Slab', serif;
      font-size:20px;
-     padding: 0px 50px 0px 50px;
+     
  }
  .welcome h3 {
      font-weight:bold;
  }
-
 
 
